[tool.black]
include = "\\.pyi?$"
line-length = 120
target-version = ["py36"]

[tool.poetry]
name = "hare"
version = "0.1.1"
description = "Hare: Smart Shortcut Engine."
authors = ["Conveen"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/conveen/hare"
classifiers = [
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
packages = [
    { include = "engine_api", from = "hare" },
    { include = "hare", from = "hare" },
    { include = "engine_ui", from = "hare" },
]
include = [
    "hare/engine_ui/static/engine_ui/*.ico",
    "hare/engine_ui/static/engine_ui/**/*.js",
    "hare/engine_ui/static/engine_ui/**/*.css",
    "hare/engine_ui/templates/engine_ui/**/*.html",
]

[tool.poetry.dependencies]
python = ">= 3.6, < 3.10"
Django = "^3.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
django-stubs = "^1.8.0"
mypy = "^0.812"
pylint = "^2.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
